[gd_scene load_steps=2 format=3 uid="uid://dul0fkd0n57jj"]

[ext_resource type="Script" uid="uid://0fyvwac441pk" path="res://scripts/chat_interface.gd" id="1_vbybi"]

[node name="Chat Interface" type="Control"]
custom_minimum_size = Vector2(1000, 400)
layout_direction = 1
layout_mode = 3
anchor_right = 1.13
anchor_bottom = 0.9
offset_left = 4.0
offset_top = 2.0
offset_right = 15.695923
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("1_vbybi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(700, 0)
layout_mode = 0
offset_right = 1304.0
offset_bottom = 519.0
alignment = 1

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
text = "back"

[node name="TitleLabel" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
text = "DeepSeek Chat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModeToggle" type="CheckButton" parent="VBoxContainer/Header"]
layout_direction = 3
layout_mode = 2
text = "DeepThink Mode"

[node name="ChatDisplay" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(900, 400)
layout_direction = 1
layout_mode = 2
editable = false
wrap_mode = 1

[node name="InputContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
alignment = 1

[node name="MessageInput" type="TextEdit" parent="VBoxContainer/InputContainer"]
custom_minimum_size = Vector2(1200, 80)
layout_direction = 2
layout_mode = 2
placeholder_text = "Type your message here:"
wrap_mode = 1

[node name="SendButton" type="Button" parent="VBoxContainer/InputContainer"]
custom_minimum_size = Vector2(100, 80)
layout_mode = 2
text = "Send"
